# stealth-browser-mcp

./: pyproject.toml
src/: server.py
src/stealth_browser_mcp/: browser_manager.py  cdp_element_cloner.py  cdp_function_executor.py  comprehensive_element_cloner.py  dom_handler.py  dynamic_hook_ai_interface.py  dynamic_hook_system.py  element_cloner.py  file_based_element_cloner.py  hook_learning_system.py  models.py  network_interceptor.py  persistent_storage.py  platform_utils.py  process_cleanup.py  progressive_element_cloner.py  response_handler.py  response_stage_hooks.py  server.py
