[project]
name = "stealth-browser-mcp"
version = "0.2.4"
description = "Ultimate undetectable browser automation MCP server with CDP-level access"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Vibhek Soni", email = "vibheksoni@engineer.com"},
]
dependencies = [
    "fastmcp==2.11.2",
    "nodriver==0.47.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "py2js @ git+https://github.com/am230/py2js.git@31a83c7c25a51ab0cc3255f484a2279d26278ec3",
    "jsbeautifier==1.15.4",
    "strinpy==0.0.4",
    "strbuilder==1.1.3",
    "psutil==7.0.0",
    "pillow==11.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vibheksoni/stealth-browser-mcp"
Documentation = "https://github.com/vibheksoni/stealth-browser-mcp#readme"
Repository = "https://github.com/vibheksoni/stealth-browser-mcp.git"
Issues = "https://github.com/vibheksoni/stealth-browser-mcp/issues"

[project.scripts]
stealth-browser-mcp = "stealth_browser_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/stealth_browser_mcp"]

[tool.hatch.metadata]
allow-direct-references = true